# ray_tracer

./: .gitignore  CMakeLists.txt  Makefile  README.md  ray_tracer.sublime-workspace
include/: CMakeLists.txt  Ray.h  canvas.h  matrix.h  ray.h  transforms.h  tuple  tuple.h  vec.h
lib/: CMakeLists.txt  Makefile  canvas.cpp  colors.cpp  main.cpp  ppm.cpp  ray.cpp  tuple.cpp  vec.cpp
src/: main.cpp
tests/: hello_test.cpp  tests.cpp
